--- a/portfolio.html
+++ b/portfolio.html
@@ -77,7 +77,16 @@
           <ul class="portfolio-list">
             <li class="portfolio-parts">
               <a href="#" class="portfolio-item">
-                <img src="./images/portfolio/project-1.jpg" alt="project-1" width="370" />
+                <div class="portfolio-overlay-box">
+                  <img src="./images/portfolio/project-1.jpg" alt="project-1" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="portfolio-sample">Технокряк</h2>
                   <p class="portfolio-type">Веб-сайт</p>
@@ -86,7 +95,16 @@
             </li>
             <li class="portfolio-parts">
               <a href="#" class="portfolio-item">
-                <img src="./images/portfolio/project-2.jpg" alt="project-2" width="370" />
+                <div class="portfolio-overlay-box">
+                  <img src="./images/portfolio/project-2.jpg" alt="project-2" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="portfolio-sample">
                     Постер <span lang="en"> Orlean vs Golden Star</span>
@@ -97,7 +115,16 @@
             </li>
             <li class="portfolio-parts">
               <a href="#" class="portfolio-item">
-                <img src="./images/portfolio/project-3.jpg" alt="project-3" width="370" />
+                <div class="portfolio-overlay-box">
+                  <img src="./images/portfolio/project-3.jpg" alt="project-3" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="portfolio-sample">Ресторан <span lang="en">Seafood</span></h2>
                   <p class="portfolio-type">Додаток</p>
@@ -106,7 +133,16 @@
             </li>
             <li class="portfolio-parts">
               <a href="#" class="portfolio-item">
-                <img src="./images/portfolio/project-4.jpg" alt="project-4" width="370" />
+                <div class="portfolio-overlay-box">
+                  <img src="./images/portfolio/project-4.jpg" alt="project-4" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="portfolio-sample">Проєкт <span lang="en">Prime</span></h2>
                   <p class="portfolio-type">Маркетинг</p>
@@ -115,7 +151,16 @@
             </li>
             <li class="portfolio-parts">
               <a href="#" class="portfolio-item">
-                <img src="./images/portfolio/project-5.jpg" alt="project-5" width="370" />
+                <div class="portfolio-overlay-box">
+                  <img src="./images/portfolio/project-5.jpg" alt="project-5" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="portfolio-sample">Проєкт <span lang="en">Boxes</span></h2>
                   <p class="portfolio-type">Додаток</p>
@@ -124,7 +169,16 @@
             </li>
             <li class="portfolio-parts">
               <a href="#" class="portfolio-item">
-                <img src="./images/portfolio/project-6.jpg" alt="project-6" width="370" />
+                <div class="portfolio-overlay-box">
+                  <img src="./images/portfolio/project-6.jpg" alt="project-6" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="portfolio-sample">
                     <span lang="en">Inspiration has no Borders</span>
@@ -135,7 +189,16 @@
             </li>
             <li class="portfolio-parts">
               <a href="#" class="portfolio-item">
-                <img src="./images/portfolio/project-7.jpg" alt="project-7" width="370" />
+                <div class="portfolio-overlay-box">
+                  <img src="./images/portfolio/project-7.jpg" alt="project-7" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="portfolio-sample">Видання <span lang="en">Limited Edition</span></h2>
                   <p class="portfolio-type">Дизайн</p>
@@ -144,7 +207,16 @@
             </li>
             <li class="portfolio-parts">
               <a href="#" class="portfolio-item">
-                <img src="./images/portfolio/project-8.jpg" alt="project-8" width="370" />
+                <div class="portfolio-overlay-box">
+                  <img src="./images/portfolio/project-8.jpg" alt="project-8" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="portfolio-sample">Проєкт<span lang="en">LAB</span></h2>
                   <p class="portfolio-type">Маркетинг</p>
@@ -153,7 +225,16 @@
             </li>
             <li class="portfolio-parts">
               <a href="#" class="portfolio-item">
-                <img src="./images/portfolio/project-9.jpg" alt="project-9" width="370" />
+                <div class="portfolio-overlay-box">
+                  <img src="./images/portfolio/project-9.jpg" alt="project-9" width="370" />
+                  <div class="portfolio-overlay">
+                    <p class="portfolio-overlay-text">
+                      Ресурс пропонує комплексні пропозиції з різним рівнем функціоналу та сервісів.
+                      Все це дозволить відвідувачу отримати вичерпні відомості про компанію чи
+                      приватну особу.
+                    </p>
+                  </div>
+                </div>
                 <div class="portfolio-name">
                   <h2 class="portfolio-sample"><span lang="en">Growing Business</span></h2>
                   <p class="portfolio-type">Додаток</p>
