--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!--Шапка сторінки-->
-    <header class="header">
+    <header>
       <div class="container">
         <div class="header-container">
           <nav class="header-nav">
@@ -62,7 +62,7 @@
       <!--Банер-->
       <section class="section-banner">
         <h1 class="banner-title">Ефективні рішення для вашого бізнесу</h1>
-        <button type="button" class="button primery">Замовити послугу</button>
+        <button type="button" class="button primery" data-modal-open>Замовити послугу</button>
       </section>
 
       <!--Особливості-->
@@ -125,12 +125,15 @@
           <ul class="work-list">
             <li class="work-item">
               <img src="./images/main-page/box-1.jpg" alt="Бокс 1" width="370" />
+              <p class="work-description">Десктопні додатки</p>
             </li>
             <li class="work-item">
               <img src="./images/main-page/box-2.jpg" alt="Бокс 2" width="370" />
+              <p class="work-description">Мобільні додатки</p>
             </li>
             <li class="work-item">
               <img src="./images/main-page/box-3.jpg" alt="Бокс 3" width="370" />
+              <p class="work-description">Дизайнерські рішення</p>
             </li>
           </ul>
         </div>
@@ -428,5 +431,17 @@
         </div>
       </div>
     </footer>
+
+    <!-- Модальне вікно -->
+    <div class="backdrop is-hidden" data-modal>
+      <div class="modal">
+        <button class="modal-close-btn" type="button" data-modal-close>
+          <svg width="18" height="18">
+            <use href="./images/icons/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
