--- a/portfolio.html
+++ b/portfolio.html
@@ -249,6 +249,7 @@
     <!--Підвал сторінки-->
     <footer class="footer">
       <div class="container footer-container">
+        <!-- Адреса компанії -->
         <div class="footer-address-list">
           <a href="./index.html" class="logo footer-logo">
             <span class="first-color-logo">Web</span><span class="second-color-logo">Studio</span>
@@ -274,6 +275,7 @@
             </ul>
           </address>
         </div>
+        <!-- Соціальні мережі компанії -->
         <div class="footer-socials">
           <h2 class="footer-title">приєднуйтесь</h2>
           <ul class="footer-socails-list">
@@ -307,6 +309,24 @@
             </li>
           </ul>
         </div>
+        <!-- Форма підписки -->
+        <form class="footer-subscription">
+          <h2 class="footer-title">Підпишіться на розсилку</h2>
+          <div class="footer-subscription-item">
+            <input
+              class="footer-subscription-box"
+              type="email"
+              placeholder="E-mail"
+              name="footer-subscription"
+            />
+            <button class="button footer-subscription-btn" type="submit">
+              Підписатися
+              <svg width="24" height="24">
+                <use href="./images/icons/icons.svg#icon-send-plane"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
