--- a/index.html
+++ b/index.html
@@ -371,6 +371,7 @@
     <!--Підвал сторінки-->
     <footer class="footer">
       <div class="container footer-container">
+        <!-- Адреса компанії -->
         <div class="footer-address-list">
           <a href="./index.html" class="logo footer-logo">
             <span class="first-color-logo">Web</span><span class="second-color-logo">Studio</span>
@@ -396,6 +397,7 @@
             </ul>
           </address>
         </div>
+        <!-- Соціальні мережі компанії -->
         <div class="footer-socials">
           <h2 class="footer-title">приєднуйтесь</h2>
           <ul class="footer-socails-list">
@@ -429,6 +431,24 @@
             </li>
           </ul>
         </div>
+        <!-- Форма підписки -->
+        <form class="footer-subscription">
+          <h2 class="footer-title">Підпишіться на розсилку</h2>
+          <div class="footer-subscription-item">
+            <input
+              class="footer-subscription-box"
+              type="email"
+              placeholder="E-mail"
+              name="footer-subscription"
+            />
+            <button class="button footer-subscription-btn" type="submit">
+              Підписатися
+              <svg width="24" height="24">
+                <use href="./images/icons/icons.svg#icon-send-plane"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
 
@@ -440,6 +460,60 @@
             <use href="./images/icons/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <div role="group" class="modal-group">
+          <h2 class="modal-title">Залиште свої дані, ми вам передзвонимо</h2>
+          <form name="contact-form">
+            <ul class="modal-list">
+              <li class="modal-item">
+                <label class="form-field-label" for="user-name">Ім'я</label>
+                <div class="form-field-box">
+                  <input class="form-field-input" id="user-name" type="text" name="user-name" />
+                  <svg class="form-field-icon" width="18" height="18">
+                    <use href="./images/icons/icons.svg#icon-user"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="modal-item">
+                <label class="form-field-label" for="user-tel">Телефон</label>
+                <div class="form-field-box">
+                  <input class="form-field-input" id="user-tel" type="tel" name="user-tel" />
+                  <svg class="form-field-icon" width="18" height="18">
+                    <use href="./images/icons/icons.svg#icon-phone"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="modal-item">
+                <label class="form-field-label" for="user-email">Пошта</label>
+                <div class="form-field-box">
+                  <input class="form-field-input" id="user-email" type="email" name="user-email" />
+                  <svg class="form-field-icon" width="18" height="18">
+                    <use href="./images/icons/icons.svg#icon-email"></use>
+                  </svg>
+                </div>
+              </li>
+              <li class="modal-item">
+                <label class="form-field-label" for="feedback" rows="">Коментар</label>
+                <textarea
+                  class="form-field-textarea"
+                  name="feedback"
+                  id="feedback"
+                  placeholder="Введіть текст"
+                ></textarea>
+              </li>
+            </ul>
+            <div class="form-field-checkbox checkbox">
+              <input class="checkbox-input" type="checkbox" name="policy" id="policy" />
+              <svg class="checkbox-icon" width="16" height="15">
+                <use href="./images/icons/icons.svg#icon-complate"></use>
+              </svg>
+              <label class="checkbox-description" for="policy"
+                >Погоджуюся з розсилкою та приймаю
+                <a class="checkbox-policy" href="#">Умови договору</a></label
+              >
+            </div>
+            <button class="button form-field-btn" type="submit">Відправити</button>
+          </form>
+        </div>
       </div>
     </div>
     <script src="./js/modal.js"></script>
